refactor: zepa endpoint URL changed
From `/api/v1/zepa` to `/api/v1/zones/zepa`
